--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head><title>Coin Tracker</title></head>
+<head><title>JOBBORD - Coin Tracker</title></head>
 <meta http-equiv="refresh" content="300"> 
 <h1 style="font-family:verdana;font-size:140%;">Coin Tracker</h1>
 
